bug when zooming out too much

--- a/src/styles/plan/budget-table.css
+++ b/src/styles/plan/budget-table.css
@@ -7,6 +7,7 @@
 .table-scroller {
     overflow-x: auto;
     margin-left: 309px;
+    max-width: min-content;
 }
 
 .table {
@@ -255,6 +256,7 @@
     vertical-align: middle;
     overflow-y: hidden;
     margin-left: 309px;
+    max-width: min-content;
 }
 
 .sticky-header {
